Changes made to accounts and categories, the data now syncs realtime and updates upon click.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".StatsActivity" />
         <activity android:name=".SettingsActivity" />
         <activity android:name=".TransactionHistoryActivity" />
-<!--        <activity android:name=".ManageAccountsActivity" />-->
+        <activity android:name=".ManageAccountsActivity" />
         <activity android:name=".ManageCategoriesActivity" />
     </application>
 
